<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="raavan_face">Raavan Face</string>
    <string name="raavan_9">Raavan 9</string>
    <string name="raavan_small">Raavan Small</string>
    <string name="eyepatch">eyePatch</string>
    <string name="flip">flip</string>
</resources>